--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -307,8 +307,8 @@
 .share-buttons,
 .paginav {
     border-radius: var(--radius);
-    /* background: var(--code-bg);
-    border: 1px solid var(--border); */
+    background: var(--code-bg);
+    border: 1px solid var(--border);
 }
 
 .post-tags a {
